--- a/login_app/templates/home.html
+++ b/login_app/templates/home.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -26,8 +26,8 @@
         margin-top: 5rem;
       }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container">
@@ -49,6 +49,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
             </li>
+            <li class="nav-item">
+              <a class="btn btn-danger nav-link" href="{{ url_for('logout') }}">Logout</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -62,5 +65,5 @@
 
     <!-- Bootstrap JS -->
     <script src="/static/js/bootstrap.bundle.min.js"></script>
-  </body>
+</body>
 </html>
