--- a/login_app/templates/login.html
+++ b/login_app/templates/login.html
@@ -124,14 +124,16 @@
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
         
         <!-- Exibir mensagem de flash -->
-        {% with messages = get_flashed_messages() %}
+        {% with messages = get_flashed_messages(with_categories=True) %}
           {% if messages %}
-            <div class="alert alert-success" role="alert">
-              {{ messages[0] }}
+            <div class="container">
+              {% for category, message in messages %}
+                <div class="alert alert-{{ category }}">{{ message }}</div>
+              {% endfor %}
             </div>
           {% endif %}
         {% endwith %}
-        
+
         <div class="form-floating">
           <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" name="email">
           <label for="floatingInput">Email address</label>
