--- a/login_app/templates/home.html
+++ b/login_app/templates/home.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="generator" content="Hugo 0.88.1">
+    <meta name="description" content="Home Page">
+    <meta name="author" content="Quality Assurance Team">
     <title>Home - Quality Assurance</title>
 
     <!-- Bootstrap CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
     <style>
       body {
         padding-top: 56px;
@@ -23,7 +24,14 @@
       }
       .welcome-text {
         text-align: center;
-        margin-top: 5rem;
+        margin-top: 2rem;
+      }
+      .user-table {
+        margin-top: 3rem;
+      }
+      .table thead {
+        background-color: #007bff;
+        color: white;
       }
     </style>
 </head>
@@ -61,6 +69,28 @@
     <div class="container welcome-text">
       <h1>Welcome to Quality Assurance Dashboard</h1>
       <p class="lead">Your professional platform for managing and overseeing QA processes efficiently.</p>
+    </div>
+
+    <!-- User Table -->
+    <div class="container user-table">
+      <h2 class="text-center">Registered Users</h2>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover mt-4">
+          <thead>
+            <tr>
+              <th scope="col">Name</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for user in users %}
+            <tr>
+              <th scope="row">{{ loop.index }}</th>
+              <td>{{ user.name }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
     </div>
 
     <!-- Bootstrap JS -->
