ajeitando o app.py para retornar um json quando solicitado um get

--- a/login_app/templates/home.html
+++ b/login_app/templates/home.html
@@ -78,6 +78,7 @@
         <table class="table table-bordered table-hover mt-4">
           <thead>
             <tr>
+              <th scope="col">#</th>
               <th scope="col">Name</th>
             </tr>
           </thead>
